feat: :sparkles: fetch iris routine via atelier doc

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "dev": "tsx src/index.ts",
     "verify": "tsx src/index.ts --verify-only",
+    "ping-demo": "tsx src/ping-demo.ts",
     "typecheck": "tsc -p tsconfig.json --noEmit"
   },
   "dependencies": {
