chore: update .env.example and package.json; remove ping-demo script

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 # Example: http://localhost:52773
 IRIS_URL=http://localhost:52773
 
-# Default namespace if not specified elsewhere
+# Required: default namespace used by tools when input does not provide one
 IRIS_NAMESPACE=USER
 
 # Credentials for HTTP Basic Auth
